Update layout, fix background override in dark mode

--- a/public/assets/styles/base.css
+++ b/public/assets/styles/base.css
@@ -59,6 +59,10 @@
 }
 
 html {
+  background-color: var(--bg-primary);
+}
+
+html, body {
   min-height: 100vh;
 }
 
@@ -66,12 +70,10 @@ body {
   display: grid;
   grid-template-rows: auto 1fr auto;
   height: 100%;
-  min-height: 100vh;
   transition-property: color, background-color, border-color,
     text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 200ms;
-  background-color: var(--bg-primary);
   color: var(--text-primary);
   font-family: var(--font-base);
   font-synthesis: none;
